--- a/src/main/resources/static/managerIndex.html
+++ b/src/main/resources/static/managerIndex.html
@@ -20,7 +20,7 @@
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
 	<div class="layui-header">
-		<div class="layui-logo" style="cursor: pointer;font-size:20px;" >评估系统(管理端)</div>
+		<div class="layui-logo" style="cursor: pointer;font-size:20px;width: 300px;" >雨花台区助残大数据平台(管理端)</div>
 		<!-- 头部区域（可配合layui已有的水平导航） -->
 		<!--<ul class="layui-nav layui-layout-left">-->
 		<!--<li class="layui-nav-item"><a href="">控制台</a></li>-->
