--- a/src/main/resources/static/webApp/manager/disabledHomeInfo.html
+++ b/src/main/resources/static/webApp/manager/disabledHomeInfo.html
@@ -89,9 +89,9 @@
 				{field:'managementSystem', width:135, title: '管理制度'},
 				{field:'projectSum', width:135, title: '服务项目总数', sort: true},
 				{field:'applySum', width:135, title: '总服务人数', sort: true},
-				{field:'wealth', width:135, title: '总服务人次', sort: true},
-				{field:'wealth', width:135, title: '总服务时长', sort: true},
-				{field:'wealth', width:135, title: '平均服务时长', sort: true},
+				{field:'personCountSum', width:135, title: '总服务人次', sort: true},
+				{field:'totalTimeSum', width:135, title: '总服务时长', sort: true},
+				{field:'averageTime', width:135, title: '平均服务时长', sort: true},
 				{field:'adminName', width:135, title: '提交人'},
 				{field:'createTime', width:135, title: '提交时间', sort: true},
 				{field:'lastModifyTime', width:135, title: '更新时间', sort: true},
