--- a/src/main/resources/static/webApp/disabledFundInfo.html
+++ b/src/main/resources/static/webApp/disabledFundInfo.html
@@ -197,28 +197,43 @@
         table.render({
             elem: '#demo'
             ,height: 600
-            ,url: 'test.json' //数据接口
+            ,url: '/api/apply/getPageByOrganization'+location.search+'&sorts=modifyTime' //数据接口
+            , request: {
+                pageName: 'page', //页码的参数名称，默认：page
+                limitName: 'number' //每页数据量的参数名，默认：limit
+            }
+            , response: {
+                statusCode: 200 //重新规定成功的状态码为 200，table 组件默认为 0
+            }
+            , parseData: function (res) { //将原始数据解析成 table 组件所规定的数据
+                return {
+                    "code": 200, //解析接口状态
+                    //                    "msg": res.message, //解析提示文本
+                    //                     "count": res.total, //解析数据长度
+                    "data": res.data //解析数据列表
+                };
+            }
             ,page: true //开启分页
             ,cols: [[ //表头
-                {field: 'id', title: '审核状态', width:200, sort: true, fixed: 'left'}
-                ,{field: 'username', title: '机构名称', width:180, sort: true}
-                ,{field: 'sex', title: '登记注册时间', width:180, sort: true}
-                ,{field: 'city', title: '地址', width:380, sort: true}
-                ,{field: 'sign', title: '负责人', width: 177, sort: true}
-                ,{field: 'experience', title: '机构面积', width: 280, sort: true}
-                ,{field: 'score', title: '床位数', width: 280, sort: true}
-                ,{field: 'classify', title: '机构性质', width: 180, sort: true}
-                ,{field: 'wealth', title: '庇护性劳动项目', width: 135, sort: true}
-                ,{field: 'wealth', title: '符合条件的全托人数', width: 135, sort: true}
-                ,{field: 'wealth', title: '符合条件的日托人数', width: 180, sort: true}
-                ,{field: 'wealth', title: '申请机构全托运营补贴资金总额', width: 235, sort: true}
-                ,{field: 'wealth', title: '上年当地资金投入情况', width: 235, sort: true}
-                ,{field: 'wealth', title: '申请托养机构运营补贴资金总额合计', width: 235, sort: true}
-                ,{field: 'wealth', title: '托养残疾人名单', width: 135, sort: true}
-                ,{field: 'wealth', title: '低保或其他低收入证明', width: 135, sort: true}
-                ,{field: 'wealth', title: '提交人', width: 135, sort: true}
-                ,{field: 'wealth', title: '提交时间', width: 135, sort: true}
-                ,{field: 'wealth', title: '更新时间', width: 135, sort: true}
+                {field: 'status', title: '审核状态', width:200, sort: true, fixed: 'left'}
+                ,{field: 'adminName', title: '机构名称', width:180, sort: true}
+                ,{field: 'registrationTime', title: '登记注册时间', width:180, sort: true}
+                ,{field: 'address', title: '地址', width:380, sort: true}
+                ,{field: 'personInCharge', title: '负责人', width: 177, sort: true}
+                ,{field: 'area', title: '机构面积', width: 280, sort: true}
+                ,{field: 'bedNum', title: '床位数', width: 280, sort: true}
+                ,{field: 'nature', title: '机构性质', width: 180, sort: true}
+                ,{field: 'asylumLaborProjects', title: '庇护性劳动项目', width: 135, sort: true}
+                ,{field: 'numOfEligibleDayNursery', title: '符合条件的全托人数', width: 135, sort: true}
+                ,{field: 'numOfEligibleBoardingNursery', title: '符合条件的日托人数', width: 180, sort: true}
+                ,{field: 'subsidyFundForBoardingNursery', title: '申请机构全托运营补贴资金总额', width: 235, sort: true}
+                ,{field: 'localInvestmentOfLastYear last_year', title: '上年当地资金投入情况', width: 235, sort: true}
+                ,{field: 'totalSubsidyFunds', title: '申请托养机构运营补贴资金总额合计', width: 235, sort: true}
+                ,{field: 'nursingList', title: '托养残疾人名单', width: 135, sort: true}
+                ,{field: 'lowIncomeCertificate', title: '低保或其他低收入证明', width: 135, sort: true}
+                ,{field: 'adminName', title: '提交人', width: 135, sort: true}
+                ,{field: 'createTime', title: '提交时间', width: 135, sort: true}
+                ,{field: 'lastModifyTime', title: '更新时间', width: 135, sort: true}
 
             ]]
         });
