--- a/src/main/resources/static/webApp/projectInfo.html
+++ b/src/main/resources/static/webApp/projectInfo.html
@@ -116,7 +116,7 @@
         table.render({
             elem: '#demo'
             ,height: 400
-            ,url: '/api/project/getProjectAnalysis2?id=2&sorts=modifyTime' //数据接口
+            ,url: '/api/project/getProjectAnalysis2'+location.search+'&sorts=modifyTime' //数据接口
             , request: {
                 pageName: 'page', //页码的参数名称，默认：page
                 limitName: 'number' //每页数据量的参数名，默认：limit
