--- a/src/main/resources/static/webApp/projectRunStatistics.html
+++ b/src/main/resources/static/webApp/projectRunStatistics.html
@@ -183,8 +183,8 @@
 <script src="../layui/layui.js" charset="utf-8"></script>
 <!-- 注意：如果你直接复制所有代码到本地，上述js路径需要改成你本地的 -->
 <script>
-function gotoDetail() {
-    window.open("projectInfo.html")
+function gotoDetail(id) {
+    window.open("projectInfo.html?id="+id)
 }
 layui.use(['table', 'form'], function () {
     var $ = layui.$;
@@ -207,7 +207,7 @@ layui.use(['table', 'form'], function () {
             html.push(' <div class="grid-project">');
             html.push(' <div class="project-info">');
             html.push('<div>');
-            html.push('<button onclick="gotoDetail()" style="float: right;" type="button" class="layui-btn layui-btn-primary layui-btn-xs">详情</button>');
+            html.push('<button onclick="gotoDetail('+array[i].id+')" style="float: right;" type="button" class="layui-btn layui-btn-primary layui-btn-xs">详情</button>');
             html.push('<h2>'+array[i].name+'</h2>');
             html.push('<div class="numbers">');
             html.push('<p>总服务人数: <span class="bold-text">'+array[i].personCountSum+'</span></p>');
